tests/NormalTests/paczka1/fuzzy1/73514639.err
Error in line 3: U96 A53 89,1
Error in line 2: HWmaXZ A768 33,7
Error in line 12: dAgNCGyKI A768 94,8
Error in line 14: HWmaXZ A260 66,6
Error in line 20: g2bUsIgyh S826 24,7
Error in line 27: g2bUsIgyh A260 31,2
Error in line 31: g2bUsIgyh A53 43,3
